[gd_scene load_steps=10 format=3 uid="uid://bkg7hbfshtyo1"]

[ext_resource type="Script" path="res://scenes/item/demi_super_potion.gd" id="1_ciagj"]
[ext_resource type="ArrayMesh" uid="uid://c57snvp5bpudc" path="res://modeles3d/demi_super_potion.obj" id="1_j8mmj"]
[ext_resource type="Texture2D" uid="uid://c0opy3beyrttp" path="res://images/textures/Concrete039_4K-JPG_Color.jpg" id="2_1i52t"]
[ext_resource type="AudioStream" uid="uid://bnhkrlirkyhfq" path="res://sons/potion_take.wav" id="4_1eg87"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2byji"]
albedo_texture = ExtResource("2_1i52t")
metallic = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0e1ik"]
transparency = 1
albedo_color = Color(0.25098, 0.486275, 0.709804, 0.239216)
metallic = 1.0
roughness = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8h36m"]
transparency = 1
albedo_color = Color(0.690196, 0, 0.0313726, 0.756863)
metallic = 1.0
roughness = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lpnle"]
height = 0.291231
radius = 0.059226

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7jjc5"]
height = 0.325476
radius = 0.113369

[node name="demi_super_potion" type="Node3D" groups=["prehensible"]]
script = ExtResource("1_ciagj")

[node name="DemiSuperPotion" type="MeshInstance3D" parent="."]
mesh = ExtResource("1_j8mmj")
surface_material_override/0 = SubResource("StandardMaterial3D_2byji")
surface_material_override/1 = SubResource("StandardMaterial3D_0e1ik")
surface_material_override/2 = SubResource("StandardMaterial3D_8h36m")

[node name="interaction_area" type="Area3D" parent="." groups=["prehensible"]]
collision_layer = 8
collision_mask = 0

[node name="interaction_form" type="CollisionShape3D" parent="interaction_area" groups=["prehensible"]]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0.0416228, 0)
shape = SubResource("CylinderShape3D_lpnle")

[node name="Demi super potion" type="StaticBody3D" parent="." groups=["prehensible"]]
collision_layer = 8

[node name="body_collision2" type="CollisionShape3D" parent="Demi super potion"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0.0395347, 0)
shape = SubResource("CylinderShape3D_7jjc5")

[node name="audio_pick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1eg87")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
